# socratic_ai_tutor

./: .env.example  .gitignore  ABOUT.md  CLAUDE.md  DEPLOYMENT.md  Final report_turnitin_submission.docx.txt  PROJECT_REVIEW.md  README.md  RECORDING_TROUBLESHOOTING.md  VIDEO_DEMO_GUIDE.md  docker-compose.yml  final_report.md  mission.txt  multi_socratic_data.json  requirements.txt  test_backend.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  admin.html  admin_old_backup.html  chat.html  entrypoint.sh  index.html  main.py  prev-admin.html  requirements.txt
backend/core/: admin_auth.py  auth.py  dialogue_controller.py  session_manager.py  tutor_system.py
backend/data/: admin_sessions.json  chat_logs.json  config.json  content_manifest.json  dialogue_examples.json  instructional_content.json  sample_dialogues.json  users.json
backend/evaluation/: analyzer.py  log_analyzer.py  metrics.py
backend/ml/: __init__.py  fine_tune_lora.py  inference_engine.py  model_loader.py  socratic_prompts.py  test_inference.py
backend/utils/: file_manager.py  timer.py
notebooks/quantization/: gguf_quantization.ipynb
socratic_app/: CODE_CHANGES_DETAILED.md  LLAMA_ANDROID_SETUP.md  LLAMA_INTEGRATION_GUIDE.md  LLAMA_PRODUCTION_REVIEW.md  README.md  VERIFICATION_CHECKLIST.md  performance_profiling.md  pubspec.yaml  visualize_memory.py
socratic_app/android/app/src/main/cpp/: CMakeLists.txt  LIBCHAT.md  libchat.cc  libchat.h
testing/: TESTING_REPORT.md
webapp/: REDESIGN_COMPLETE.md  REDESIGN_PLAN.md  index.html  package-lock.json  package.json  tailwind.config.js
(+318 files in other folders)
